add playlist to index navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@
                 <a href="{{ url_for('index') }}">Home</a>
                 <a href="{{ url_for('add_video') }}">Add Video</a>
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
+                <a href="{{ url_for('playlists') }}">Playlists</a>
             </div>
         </div>
     </nav>
