upload as playlist

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,6 +112,7 @@
                 <a href="{{ url_for('add_video') }}">Add Video</a>
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
                 <a href="{{ url_for('playlists') }}">Playlists</a>
+                <a href="{{ url_for('add_multiple_videos') }}">Add Multiple</a>
             </div>
         </div>
     </nav>
